fixed alignment

--- a/stylesheets/frame.css
+++ b/stylesheets/frame.css
@@ -112,7 +112,7 @@ body {
     background-color: white;
     padding: 25px;
     text-align: justify;
-    height: 610px;
+    height: 100%;
 }
 
 /* Style the topnav links */
